--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@ function showTip() {
     "Spend time in nature to improve your mental health.",
     "Practice mindfulness or meditation to reduce stress and anxiety.",
     "Take care of your physical health to maintain your mental well-being.",
+    "Always eat raw fish",
+    "Never say Never"
+    "Build quality friendships"
+    "Spend time outside today"
+    "Go on a run"
+    "Tell your mom you love her"
+    "Never underestimate others"
+    "Paint a rock"
     "Find a hobby or activity that you enjoy to relieve stress and boost your mood."
   ];
 
