--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ function showTip() {
     "Drink more water to improve your health.",
     "Try to get at least 7-8 hours of sleep every night.",
     "Set small goals to achieve a larger goal.",
-    “If you want to talk to a cute girl, hit her with a soccer ball”,
+    "If you want to talk to a cute girl, hit her with a soccer ball",
     “Try new foods”,
 		“Math sucks, so if you want a happier life..don’t do math”,
 		“Live, Laugh, Love”,
