--- a/index.html
+++ b/index.html
@@ -84,20 +84,20 @@ function showTip() {
     "Try to get at least 7-8 hours of sleep every night.",
     "Set small goals to achieve a larger goal.",
     "If you want to talk to a cute girl, hit her with a soccer ball",
-    “Try new foods”,
-		“Math sucks, so if you want a happier life..don’t do math”,
-		“Live, Laugh, Love”,
-		“Staying out to 4am is overrated”, 
-		“Meet new people everyday”,
-		“Always pay gas money before you are asked”,
-		“If you want friends…own a car”,
-		“Girls like Pre-Med (in case you are wondering what degree to choose)”,
-		“Eat a bowl of cereal”,
-		“Be spontaneous”,
-		“Tortillas make a quick breakfast”, 
-		“Find the friend that you can just look at and know you are thinking the same thing”,
-		“Be thankful for your family”,
-		“Text a friend you haven’t talked to in a while”,
+    "Try new foods",
+		"Math sucks, so if you want a happier life..don’t do math",
+		"Live, Laugh, Love",
+		"Staying out to 4am is overrated", 
+		"Meet new people everyday",
+		"Always pay gas money before you are asked",
+		"If you want friends…own a car",
+		"Girls like Pre-Med (in case you are wondering what degree to choose)",
+		"Eat a bowl of cereal",
+		"Be spontaneous",
+		"Tortillas make a quick breakfast", 
+		"Find the friend that you can just look at and know you are thinking the same thing",
+		"Be thankful for your family",
+		"Text a friend you haven’t talked to in a while",
     "Always eat raw fish",
     "Never say Never",
     "Build quality friendships",
